# transolver-hf-experiments

./: .gitignore  README.md  inference.py  pyproject.toml  trainer_custom_hf.py
transolver-rotor37-small-train/: hf_export.py  modeling_transolver.py  train_and_export.py
